# simple_rtp_server

./: .gitignore  README.md  main.cpp  myrecv.sh  simple_rtp_server.pro
src/: CMakeLists.txt
